// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput when no properties are set matches snapshot 1`] = `
<div class="tm-search-input">
  <input type="text"
         tabindex="0"
         placeholder
         title
         value
  >
  <div role="button"
       style="display: none;"
       tabindex="0"
       class="tm-button tm-bt-clear"
       title
       aria-label
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 24 24"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path fill="none"
            d="M0 0h24v24H0z"
      >
      </path>
      <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
      </path>
    </svg>
  </div>
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-search"
       title
       aria-label
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot  1`] = `
<div class="tm-foo">
  <input type="text"
         tabindex="0"
         placeholder="gux"
         title
         value="bar"
  >
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-clear"
       title
       aria-label
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 24 24"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path fill="none"
            d="M0 0h24v24H0z"
      >
      </path>
      <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
      </path>
    </svg>
  </div>
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-search"
       title
       aria-label
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot  2`] = `
<div class="tm-foo">
  <input type="text"
         tabindex="0"
         placeholder="gux"
         title
         value="bar"
  >
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-clear"
       title
       aria-label
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 24 24"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path fill="none"
            d="M0 0h24v24H0z"
      >
      </path>
      <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
      </path>
    </svg>
  </div>
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-search"
       title
       aria-label
  >
    search
  </div>
</div>
`;

exports[`SearchInput when properties are set matches snapshot when className is undefined  1`] = `
<div class="tm-search-input">
  <input type="text"
         tabindex="0"
         placeholder
         title
         value
  >
  <div role="button"
       style="display: none;"
       tabindex="0"
       class="tm-button tm-bt-clear"
       title
       aria-label
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 24 24"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path fill="none"
            d="M0 0h24v24H0z"
      >
      </path>
      <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
      </path>
    </svg>
  </div>
  <div role="button"
       tabindex="0"
       class="tm-button tm-bt-search"
       title
       aria-label
  >
    search
  </div>
</div>
`;
